.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for conferePalavra
Info: Nothing to build for ContaUm
Info: Nothing to build for ED2
13:57:12 **** Incremental Build of configuration Debug for project arara ****
Info: Internal Builder is used for build
gcc -o arara.exe "src\\arara.o" 
c:/mingw/bin/../lib/gcc/mingw32/4.8.1/../../../../mingw32/bin/ld.exe: cannot open output file arara.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
Info: Nothing to build for conferePalavra
Info: Nothing to build for expoente
Info: Nothing to build for fatorial
Info: Nothing to build for fibonacci
Info: Nothing to build for mdc_euclides
Info: Nothing to build for conferePalavra
13:58:38 **** Incremental Build of configuration Debug for project conferePalavra ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\conferePalavra.o" "..\\src\\conferePalavra.c" 
..\src\conferePalavra.c: In function 'main':
..\src\conferePalavra.c:25:7: error: size of array 'pal' has non-integer type
  char pal["arara"];
       ^
13:58:57 **** Incremental Build of configuration Debug for project conferePalavra ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\conferePalavra.o" "..\\src\\conferePalavra.c" 
gcc -o conferePalavra.exe "src\\conferePalavra.o" 
13:59:13 **** Incremental Build of configuration Debug for project conferePalavra ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\conferePalavra.o" "..\\src\\conferePalavra.c" 
..\src\conferePalavra.c: In function 'main':
..\src\conferePalavra.c:26:8: warning: character constant too long for its type [enabled by default]
  pal = 'arara';
        ^
..\src\conferePalavra.c:26:6: error: incompatible types when assigning to type 'char[100]' from type 'int'
  pal = 'arara';
      ^
13:59:19 **** Incremental Build of configuration Debug for project conferePalavra ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\conferePalavra.o" "..\\src\\conferePalavra.c" 
..\src\conferePalavra.c: In function 'main':
..\src\conferePalavra.c:26:6: error: incompatible types when assigning to type 'char[100]' from type 'char *'
  pal = "arara";
      ^
14:00:24 **** Incremental Build of configuration Debug for project conferePalavra ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\conferePalavra.o" "..\\src\\conferePalavra.c" 
..\src\conferePalavra.c: In function 'main':
..\src\conferePalavra.c:26:8: error: expected expression before ';' token
  pal = ;
        ^
..\src\conferePalavra.c:29:24: warning: character constant too long for its type [enabled by default]
  printf("%d", verifica('arara', tam));
                        ^
..\src\conferePalavra.c:29:2: warning: passing argument 1 of 'verifica' makes pointer from integer without a cast [enabled by default]
  printf("%d", verifica('arara', tam));
  ^
..\src\conferePalavra.c:15:5: note: expected 'char *' but argument is of type 'int'
 int verifica( char str[], int len){
     ^
14:02:05 **** Incremental Build of configuration Debug for project conferePalavra ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\conferePalavra.o" "..\\src\\conferePalavra.c" 
..\src\conferePalavra.c: In function 'main':
..\src\conferePalavra.c:29:24: warning: character constant too long for its type [enabled by default]
  printf("%d", verifica('arara', tam));
                        ^
..\src\conferePalavra.c:29:2: warning: passing argument 1 of 'verifica' makes pointer from integer without a cast [enabled by default]
  printf("%d", verifica('arara', tam));
  ^
..\src\conferePalavra.c:15:5: note: expected 'char *' but argument is of type 'int'
 int verifica( char str[], int len){
     ^
gcc -o conferePalavra.exe "src\\conferePalavra.o" 
14:02:26 **** Incremental Build of configuration Debug for project conferePalavra ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\conferePalavra.o" "..\\src\\conferePalavra.c" 
gcc -o conferePalavra.exe "src\\conferePalavra.o" 
Info: Nothing to build for conferePalavra
Info: Nothing to build for conferePalavra
